# robotics

./: README.md
etc/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum.urdf
etc/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/worlds/: wall.world
etc/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_world.launch
etc/random_box_mover/: readme.md
etc/random_box_mover/src/: random_box_mover.cpp
etc/random_box_mover/urdf/: box4.urdf
src/agent_node/: CMakeLists.txt  package.xml
src/agent_node/src/: agent.py  env.py  running.py
src/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description.launch
src/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/urdf/: box1.urdf  box7.urdf  box8.urdf  box_target.urdf  lidar.xacro  nexus_4wd_mecanum.urdf  test.urdf
src/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/worlds/: wall.world
src/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_world.launch
src/random_box_mover/: CMakeLists.txt  package.xml
src/random_box_mover/launch/: load_boxes.launch
src/random_box_mover/src/: random_box_mover.cpp
