<?xml version="1.0"?>
<package format="2">
  <name>random_box_mover</name>
  <version>0.0.1</version>
  <description>The random_box_mover package</description>
  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>

